--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ rich-toolkit==0.12.0
 shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.41.3
+tinydb==4.8.2
 tqdm==4.67.1
 typer==0.15.1
 typing_extensions==4.12.2
